--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
             /* background-repeat: no-repeat; */
             display: flex;
             flex-direction: column;
+            /* 字体设置为楷体; */
+            font-family: 'KaiTi';
         }
         .animate-text{
             width: 100%;
@@ -23,16 +25,18 @@
             transform: translate(-50%,-50%);
             font-size: 50px;
             color: #fff;
-            font-family: 'Microsoft Yahei';
             text-align: center;
             text-wrap: nowrap;
             /* animation: animate 5s linear infinite; */
         }
         .nav{  
                margin-top: 80vh;
-               height: 14vh;
+               margin-left: auto;
+                margin-right: auto;
+               height: 20vh;
+               width: 80vw;
                display: flex;      
-               justify-content: space-around;
+               justify-content: space-between;
                gap:4%;
         }
         .nav .card{
@@ -40,15 +44,22 @@
             position:static;
             background-color: #fff;
             height: 100%;
-            flex: 0.16;
+            flex: 1.5;
             transition: all 0.6s linear;
+            animation: cardEnter 1.5s ease-in-out;
             box-shadow: 0 5px 15px rgba(0,0,0,0.5);
             backdrop-filter: blur(50%);
             overflow: hidden;
         }
+        .nav .card.touched{
+            transform: translateY(-20px);
+            scale: 1.1; 
+        }
         .nav .card:hover{
             transform: translateY(-20px);
+            scale: 1.1;
         }
+
         .nav .card img{
             width: 100%;
             height: 60%;
@@ -57,52 +68,107 @@
             width: 100%;
             height: 70%;
         }
-        .nav .card a{
+        .nav a{
             text-decoration: none;
-             color: black;
+            color: black;
         }
-        .card-content{
-            font-size: 110%;
+        .nav .card .card-content{
             font-weight: bold;
             text-align: center;
+            text-wrap: nowrap  ;
+            background: transparent;
+            /* filter: blur(10px); */
+            /* backdrop-filter: blur(5px); */
+            display: flex;
+            justify-content: center;
+            text-decoration: none;
+            font-size: 1.5em;
+            color: black;
+        }
+        @keyframes cardEnter {
+            0%{
+                transform: translateY(40px);
+                opacity: 0.2;
+            }
+            100%{
+                transform: 0;
+                opacity: 1;
+            }
+        }
+        /* 手机端字体变小 */
+        @media screen and (max-width: 600px) {
+            .animate-text{
+                font-size: 1.5em;
+            }
+            .animate-text p{
+                width: 90%;
+            }
+            .nav .card a{
+                font-size: 1rem;
+            }
+            .nav .card{
+                flex: 1;
+                height: 70%;
+            }
+            .nav .card:touched{
+                transform: translateY(-20px);
+                scale: 1.1;
+            }
         }
     </style>
 </head>
 <body>
+    <audio src="assets/music/index_bgm.mp3" ></audio>
+    <!-- 进入界面就放音乐 -->
+
     <div class="animate-text">
          <p>浮生半日，赴一场品茶之约</p>
     </div>
     <div class="nav">
+  
         <div class="card">
-            <img src="https://img.zcool.cn/community/0113c856580c3132f87512f606d6f5.JPG@1280w_1l_2o_100sh.jpg" alt="">
-            <div class="card-content">
-                <a href="html/teaIntroduction.html">茶叶品种</a>
-            </div>
+            <a href="html/teaIntroduction.html">
+                <img src="https://img.zcool.cn/community/0113c856580c3132f87512f606d6f5.JPG@1280w_1l_2o_100sh.jpg" alt="">
+                <div class="card-content">
+                    <a href="">茶叶品种</a>
+                </div>
+            </a>
+        </div>
+
+        <div class="card">
+            <a href="html/teaIntroduction.html">
+                <img src="https://cbu01.alicdn.com/img/ibank/2017/942/133/6498331249_1829288745.jpg" alt="">
+                <div class="card-content">
+                        <a href="html/teaIntroduction.html">品茶步骤</a>
+                </div>
+            </a>
         </div>
         <div class="card">
-            <img src="https://cbu01.alicdn.com/img/ibank/2017/942/133/6498331249_1829288745.jpg" alt="">
-            <div class="card-content">
-                    <a href="html/teaIntroduction.html">品茶步骤</a>
-            </div>
+            <a href="html/teaIntroduction.html">
+                        <img src="https://ts1.cn.mm.bing.net/th/id/R-C.4877b749e9272ba2a20c656eeadb2f56?rik=ANVaY6HnHUEOXA&riu=http%3a%2f%2fimg95.699pic.com%2fphoto%2f50049%2f5722.jpg_wh860.jpg&ehk=9VCieWaTHfgXbynlcCD8qlqxBTbCRb7RHsRtPJuvFnQ%3d&risl=&pid=ImgRaw&r=0"
+                            alt="">
+                        <div class="card-content">
+                            <a href="html/teaIntroduction.html">茶文化</a>
+                        </div>
+            </a>
         </div>
         <div class="card">
-            <img src="https://ts1.cn.mm.bing.net/th/id/R-C.4877b749e9272ba2a20c656eeadb2f56?rik=ANVaY6HnHUEOXA&riu=http%3a%2f%2fimg95.699pic.com%2fphoto%2f50049%2f5722.jpg_wh860.jpg&ehk=9VCieWaTHfgXbynlcCD8qlqxBTbCRb7RHsRtPJuvFnQ%3d&risl=&pid=ImgRaw&r=0" alt="">
-            <div class="card-content">
-                    <a href="html/teaIntroduction.html">茶文化</a>
-            </div>
-        </div>
-        <div class="card">
-            <img src="https://p1.ssl.qhimg.com/t015395baf1ef529b85.jpg" alt="">
-            <div class="card-content">
+             <a href="html/teaIntroduction.html">
+                    <img src="https://p1.ssl.qhimg.com/t015395baf1ef529b85.jpg" alt="">
+                    <div class="card-content">
                         <a href="html/teaIntroduction.html">更多资讯</a>
-            </div>
+                    </div>
+             </a>
         </div>
 
     </div>
 
 
     <script>
-   
+    //    进入界面就放音乐
+        let audio = document.querySelector('audio');
+        audio.play();
+        
         const words = '浮生半日，赴一场品茶之约';
         textContainer = document.querySelector('.animate-text');
         autoText = document.querySelector('.animate-text p');
@@ -117,7 +183,17 @@
             //   index=index+1;
             setTimeout(autoTextAffect, speed);
         }
-
+    //    移动端经过card就放大
+        let cards=document.querySelectorAll('.card');
+        cards.forEach((card,index)=>{
+            card.addEventListener('touchstart',()=>{
+                card.classList.add('touched');
+                console.log('touched')
+            })
+            card.addEventListener('touchend',()=>{
+                card.classList.remove('touched');
+            })
+        })
     </script>
 </body>
 </html>
