--- a/index.html
+++ b/index.html
@@ -83,7 +83,9 @@
             justify-content: center;
             text-decoration: none;
             font-size: 1.5em;
-            color: black;
+            color: white;
+            /* background-color: black; */
+
         }
         @keyframes cardEnter {
             0%{
@@ -144,7 +146,7 @@
             </a>
         </div>
         <div class="card">
-            <a href="html/teaIntroduction.html">
+            <a href="html/famousPerson.html">
                         <img src="https://ts1.cn.mm.bing.net/th/id/R-C.4877b749e9272ba2a20c656eeadb2f56?rik=ANVaY6HnHUEOXA&riu=http%3a%2f%2fimg95.699pic.com%2fphoto%2f50049%2f5722.jpg_wh860.jpg&ehk=9VCieWaTHfgXbynlcCD8qlqxBTbCRb7RHsRtPJuvFnQ%3d&risl=&pid=ImgRaw&r=0"
                             alt="">
                         <div class="card-content">
