--- a/html/teaIntroduction.html
+++ b/html/teaIntroduction.html
@@ -5,48 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../css/nav.css">
     <style>
-        body{
-            font-family: 'Kaiti';
-        }
-        .nav{
-
-            width: 110%;
-            display: flex;
-            justify-content: space-between;
-            background-color: black;
-
-        }
-        .nav .logo{
-            width: 10vw;
-            height: 10vh;
-            background-size: cover;
-            background-position: center;
-            background-repeat: no-repeat;
-            border-radius: 50px;
-        }
-        .nav .menu{
-            width: 80%;
-            font-size: 1.5em;
-            font-weight: bold;
-        }
-        .nav .menu ul{
-            color: white;
-            display: flex;
-            list-style: none;
-            justify-content: space-around;
-            gap:15%; 
-            /* text-decoration: none; */
-        }
-        .nav .menu li{
-            flex: 1;
-        }
-        .nav .menu a{
-            text-decoration: none;
-            color: white;
-        }
-
-
         /* ----------------------------------nav  */
         .shell {
             background-color: aliceblue;
@@ -79,27 +39,33 @@
             text-align: center;
             /* display: flex; */
         }
+
         .gap .text {
             font-size: 1.5em;
         }
-        @media  screen and (max-width: 600px) {
+
+        @media screen and (max-width: 600px) {
             .nav {
                 flex-direction: column;
                 align-items: center;
             }
+
             .nav .logo {
-               width: 50vw;
-               height: 50px;
+                width: 50vw;
+                height: 50px;
             }
+
             .nav .menu {
                 width: 100%;
                 font-size: 1em;
             }
+
             .shell .gap {
                 height: 10vh;
                 /* font-size: 1em; */
             }
-            .shell .gap .text{
+
+            .shell .gap .text {
                 font-size: 1em;
             }
         }
@@ -107,12 +73,12 @@
 </head>
 
 <body>
-    <audio src="../assets/music/index_bgm.mp3" ></audio>
+    <audio src="../assets/music/index_bgm.mp3"></audio>
     <div class="nav">
         <a href="../index.html">
-                <div class="logo"
-                    style="background-image: url('https://img.zcool.cn/community/0163da56a31cf26ac7256cb0e644a0.JPG@1280w_1l_2o_100sh.jpg');">
-                </div>
+            <div class="logo"
+                style="background-image: url('https://img.zcool.cn/community/0163da56a31cf26ac7256cb0e644a0.JPG@1280w_1l_2o_100sh.jpg');">
+            </div>
         </a>
         <div class="menu">
             <ul>
@@ -120,14 +86,14 @@
                 <li>品茶步骤</li>
                 <li>茶文化</li>
                 <li>更多资讯</li> -->
-            
+
             </ul>
             <ul>
                 <a href="">
                     <li>茶叶品种</li>
                 </a><a href="">
                     <li>品茶步骤</li>
-                </a><a href="">
+                </a><a href="famousPerson.html">
                     <li>茶文化</li>
                 </a><a href="">
                     <li>更多资讯</li>
@@ -136,36 +102,40 @@
         </div>
     </div>
     <div class="shell">
-        <div class="img" style="background-image: url('https://img.zcool.cn/community/0170e057ccf3480000012e7ee98ba2.jpg@1280w_1l_2o_100sh.jpg');">
+        <div class="img"
+            style="background-image: url('https://img.zcool.cn/community/0170e057ccf3480000012e7ee98ba2.jpg@1280w_1l_2o_100sh.jpg');">
             <div class="text">
-茶叶源于中国，茶叶最早是被作为祭品使用的。但从春秋后期就被人们作为菜食，在西汉中期发展为药用，西汉后期才发展为宫廷高级饮料，普及民间作为普通饮料那是西晋以后的事。            </div>
+                茶叶源于中国，茶叶最早是被作为祭品使用的。但从春秋后期就被人们作为菜食，在西汉中期发展为药用，西汉后期才发展为宫廷高级饮料，普及民间作为普通饮料那是西晋以后的事。 </div>
         </div>
         <div class="gap">
             <div class="text">
                 <h1>坐酌泠泠水，看煎瑟瑟尘。</h1>
             </div>
         </div>
-        <div class="img" style="background-image: url('https://ts1.cn.mm.bing.net/th/id/R-C.859d852902d33e492f5e431e30644e12?rik=zYV8tf2TQtIgig&riu=http%3a%2f%2fimg.zcool.cn%2fcommunity%2f011c5957ccf3600000012e7e580a70.jpg%401280w_1l_2o_100sh.jpg&ehk=nqdJeDGSqjm1HNo3Q0amLUwUTPr0yffgtSFHYl1SdfQ%3d&risl=&pid=ImgRaw&r=0');">
+        <div class="img"
+            style="background-image: url('https://ts1.cn.mm.bing.net/th/id/R-C.859d852902d33e492f5e431e30644e12?rik=zYV8tf2TQtIgig&riu=http%3a%2f%2fimg.zcool.cn%2fcommunity%2f011c5957ccf3600000012e7e580a70.jpg%401280w_1l_2o_100sh.jpg&ehk=nqdJeDGSqjm1HNo3Q0amLUwUTPr0yffgtSFHYl1SdfQ%3d&risl=&pid=ImgRaw&r=0');">
             <div class="text">
-依据季节采制可分为春茶、夏茶、秋茶、冬茶。以各种毛茶或精制茶叶再加工形成再加茶，包括分为花茶、紧压茶、萃取茶、药用保健茶、茶食品、含茶饮料等。            </div>
+                依据季节采制可分为春茶、夏茶、秋茶、冬茶。以各种毛茶或精制茶叶再加工形成再加茶，包括分为花茶、紧压茶、萃取茶、药用保健茶、茶食品、含茶饮料等。 </div>
         </div>
         <div class="gap">
             <div class="text">
                 <h1>无由持一碗，寄与爱茶人。</h1>
             </div>
         </div>
-        <div class="img" style="background-image: url('https://pic3.zhimg.com/v2-5b3465fcea000297bae0faed86b601a2_r.jpg');">
+        <div class="img"
+            style="background-image: url('https://pic3.zhimg.com/v2-5b3465fcea000297bae0faed86b601a2_r.jpg');">
             <div class="text">
-绿茶：不发酵的茶（发酵度为零）。代表茶有：黄山毛峰、普龙茶、蒙顶甘露、日照绿茶、崂山绿茶、六安瓜片、龙井茶</div>
+                绿茶：不发酵的茶（发酵度为零）。代表茶有：黄山毛峰、普龙茶、蒙顶甘露、日照绿茶、崂山绿茶、六安瓜片、龙井茶</div>
         </div>
         <div class="gap">
             <div class="text">
                 <h1>碾雕白玉，罗织红纱。</h1>
             </div>
         </div>
-        <div class="img" style="background-image: url('https://img.zcool.cn/community/012de25d82ddd1a8012060be5a682b.jpg@1280w_1l_2o_100sh.jpg');">
+        <div class="img"
+            style="background-image: url('https://img.zcool.cn/community/012de25d82ddd1a8012060be5a682b.jpg@1280w_1l_2o_100sh.jpg');">
             <div class="text">
-红茶：全发酵的茶（发酵度为80～90m）祁门红茶、荔枝红茶，汉山红红茶等。红茶主要有小种红茶、工夫红茶和红碎茶三大类。工夫红茶主要分布在广东、福建、江西一带，以潮汕的工夫茶为主。            </div>
+                红茶：全发酵的茶（发酵度为80～90m）祁门红茶、荔枝红茶，汉山红红茶等。红茶主要有小种红茶、工夫红茶和红碎茶三大类。工夫红茶主要分布在广东、福建、江西一带，以潮汕的工夫茶为主。 </div>
         </div>
         <div class="gap">
             <div class="text">
@@ -176,8 +146,9 @@
 
     </div>
 </body>
- <script>
-    let audio=document.querySelector('audio');
+<script>
+    let audio = document.querySelector('audio');
     audio.play();
- </script>
+</script>
+
 </html>
