--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>茶</title>
     <style>
         body{
-            background-image: url('../课程学习/img/封面33.jpg');
+            background-image: url('./img/封面33.jpg');
             background-size:100% 100% ;
             background-attachment:fixed; 
             /* background铺满 */
@@ -122,7 +122,7 @@
     </style>
 </head>
 <body>
-    <audio src="assets/music/index_bgm.mp3" ></audio>
+    <audio src="assets/music/index_bgm.mp3" controls="controls" ></audio>
     <!-- 进入界面就放音乐 -->
 
     <div class="animate-text">
