--- a/html/famousPerson.html
+++ b/html/famousPerson.html
@@ -52,7 +52,7 @@
             flex: 5;
         }
         .panel.active li{
-            /* display: block; */
+            display: block;
             opacity: 1;
         }
         .panel.active h3 {
