--- a/html/teaIntroduction.html
+++ b/html/teaIntroduction.html
@@ -89,13 +89,13 @@
 
             </ul>
             <ul>
-                <a href="">
+                <a href="teaIntroduction.html">
                     <li>茶叶品种</li>
                 </a><a href="">
                     <li>品茶步骤</li>
-                </a><a href="famousPerson.html">
+                </a><a href="teaCulture.html">
                     <li>茶文化</li>
-                </a><a href="">
+                </a><a href="moreDetail.html">
                     <li>更多资讯</li>
                 </a>
             </ul>
