--- a/index.html
+++ b/index.html
@@ -146,19 +146,19 @@
             </a>
         </div>
         <div class="card">
-            <a href="html/famousPerson.html">
+            <a href="html/teaCulture.html">
                         <img src="https://ts1.cn.mm.bing.net/th/id/R-C.4877b749e9272ba2a20c656eeadb2f56?rik=ANVaY6HnHUEOXA&riu=http%3a%2f%2fimg95.699pic.com%2fphoto%2f50049%2f5722.jpg_wh860.jpg&ehk=9VCieWaTHfgXbynlcCD8qlqxBTbCRb7RHsRtPJuvFnQ%3d&risl=&pid=ImgRaw&r=0"
                             alt="">
                         <div class="card-content">
-                            <a href="html/teaIntroduction.html">茶文化</a>
+                            <a href="html/teaCulture.html">茶文化</a>
                         </div>
             </a>
         </div>
         <div class="card">
-             <a href="html/teaIntroduction.html">
+             <a href="html/moreDetail.html">
                     <img src="https://p1.ssl.qhimg.com/t015395baf1ef529b85.jpg" alt="">
                     <div class="card-content">
-                        <a href="html/teaIntroduction.html">更多资讯</a>
+                        <a href="html/moreDetail.html">更多资讯</a>
                     </div>
              </a>
         </div>
