change ths fontSize

--- a/html/famousTea.html
+++ b/html/famousTea.html
@@ -34,6 +34,7 @@
             position: relative;
             transition: all 700ms ease-in;
             overflow: hidden;
+            font-size: 1.5rem;
         }
 
 
@@ -60,7 +61,7 @@
             transition: all 0.7s ease-in 0.4s;
         }
 
-        @media (max-width: 480px) {
+        @media (max-width: 880px) {
             .container {
                 width: 100vw;
             }
@@ -68,7 +69,9 @@
             .panel.panel.active {
                 flex: 2;
             }
-
+            .panel{
+                font-size: 0.7rem;
+            }
             /* .panel:nth-of-type(4),
             .panel:nth-of-type(5) {
                 display: none;
