--- a/html/teaMakingStep.html
+++ b/html/teaMakingStep.html
@@ -56,6 +56,7 @@
         .gap .imgContainer img {
             width: 40%;
             height: 100%;
+            
         }
 
         .gap .imgContainer img.firstImg::after {
@@ -67,6 +68,8 @@
             transform: translateX(50%);
             /* opacity: 0.5; */
             /* position: absolute; */
+         
+
         }
 
         .gap .imgContainer .arrowRight {
@@ -75,6 +78,7 @@
             transform: translateY(80%);
             opacity: 0;
             transition: all 1s ease-in-out;
+            /* animation: shakeLight 1s infinite; */
         }
 
         .gap .imgContainer .finishImg {
@@ -95,8 +99,24 @@
             height: 8%;
             transform: translate(60%, 200%);
             position: absolute;
+            animation: shakeLight 1.3s ease-in-out infinite;
         }
-
+        @keyframes shakeLight {
+            0%{
+                opacity: 0;
+                /* translate: translate(60%, 500%); */
+                scale: 1.1;
+            }
+            /* 50%{
+                opacity: 0.8;
+                translate: translate(60%, 400%);
+            } */
+            100%{
+                opacity: 1;
+                /* translate: translate(60%, 200%); */
+                scale: 1.4;
+            }
+        }
         @media screen and (max-width: 900px) {
             .nav {
                 flex-direction: column;
@@ -149,7 +169,7 @@
                     <li>制茶步骤</li>
                 </a><a href="famousTea.html">
                     <li>茶叶品种</li>
-                </a><a href="famousTea.html">
+                </a><a href="tasteTeaStep.html">
                     <li>品茶步骤</li>
                 </a><a href="moreDetail.html">
                     <li>更多资讯</li>
